--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,13 @@
 *.log
 auth.json
 vendor
-web/app/cache
-web/app/mu-plugins
-web/app/plugins
-web/app/upgrade
-web/app/uploads
+web/wp-content/cache
+web/wp-content/mu-plugins
+web/wp-content/plugins
+web/wp-content/upgrade
+web/wp-content/uploads
 web/wp
 
 !.env.example
-!web/app/plugins/.gitkeep
-!web/app/uploads/.gitkeep
+!web/wp-content/plugins/.gitkeep
+!web/wp-content/uploads/.gitkeep
