--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "plugins": [
       "@prettier/plugin-php"
     ],
-    "singleQuote": true
+    "singleQuote": true,
+    "tabWidth": 2
   }
 }
