🔧 Vite config, inspired by https://github.com/vinkla/wordplate/blob/master/vite.config.js

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "wordpress-starter",
   "version": "1.0.0",
+  "type": "module",
   "devDependencies": {
     "@prettier/plugin-php": "*",
     "@tailwindcss/vite": "^4.0.15",
