🔧 Namespace and textdomain starter > theme

--- a/composer.json
+++ b/composer.json
@@ -84,7 +84,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Starter\\": "web/wp-content/themes/starter/src"
+      "Theme\\": "web/wp-content/themes/starter/src"
     }
   }
 }
