--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "wordpress-starter",
+  "description": "WordPress starter project for custom theme development",
   "version": "1.0.0",
   "type": "module",
   "devDependencies": {
