--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,20 @@
+# WordPress
+WP_ENV='development'
+WP_HOME='http://www.wordpress-starter.test'
+
+# Database
 DB_HOST='localhost'
 DB_NAME='wordpress-starter'
 DB_USER='root'
 DB_PASSWORD='root'
 
-WP_ENV='development'
-WP_HOME='http://www.wordpress-starter.test'
-WP_SITEURL="${WP_HOME}/wp"
-
+# Debugging
 WP_DEBUG=true
 WP_DEBUG_DISPLAY=false
 WP_DEBUG_LOG=true
 
-# Generate your keys here: https://roots.io/salts.html
+# Authentication
+# https://roots.io/salts.html
 AUTH_KEY='generateme'
 SECURE_AUTH_KEY='generateme'
 LOGGED_IN_KEY='generateme'
