🚧 Overwrite CTA content on subpages and translations

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     {
       "name": "Sjoerd Boerrigter",
       "email": "s.boerrigter@gmail.com",
-      "homepage": "https://www.bonsjoerd.fr"
+      "homepage": "https://www.bonsjoerd.eu"
     }
   ],
   "repositories": {
