--- a/.env.example
+++ b/.env.example
@@ -14,12 +14,12 @@ WP_DEBUG_DISPLAY=false
 WP_DEBUG_LOG=true
 
 # Authentication
-# https://roots.io/salts.html
-AUTH_KEY='generateme'
-SECURE_AUTH_KEY='generateme'
-LOGGED_IN_KEY='generateme'
-NONCE_KEY='generateme'
-AUTH_SALT='generateme'
-SECURE_AUTH_SALT='generateme'
-LOGGED_IN_SALT='generateme'
-NONCE_SALT='generateme'
+# Generate here: https://roots.io/salts.html
+AUTH_KEY='generate_me'
+SECURE_AUTH_KEY='generate_me'
+LOGGED_IN_KEY='generate_me'
+NONCE_KEY='generate_me'
+AUTH_SALT='generate_me'
+SECURE_AUTH_SALT='generate_me'
+LOGGED_IN_SALT='generate_me'
+NONCE_SALT='generate_me'
