✨ Get images from production if they don't exist locally

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,9 @@ WP_DEBUG=true
 WP_DEBUG_DISPLAY=false
 WP_DEBUG_LOG=true
 
+# Theme
+PRODUCTION_URL='https://www.wordpress-starter.nl'
+
 # Authentication
 # Generate here: https://roots.io/salts.html
 AUTH_KEY='generate_me'
