Add security headers to .htaccess

--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,3 +1,12 @@
+# Security Headers
+<IfModule mod_headers.c>
+    Header set X-XSS-Protection "1; mode=block"
+    Header set X-Frame-Options "SAMEORIGIN"
+    Header set X-Content-Type-Options "nosniff"
+    Header set Referrer-Policy "strict-origin-when-cross-origin"
+    Header set Permissions-Policy "geolocation=(), microphone=(), camera=()"
+</IfModule>
+
 # Deny direct access to PHP files
 <Files *.php>
 deny from all
