🚚 wordpress-starter > start

--- a/auth.json.example
+++ b/auth.json.example
@@ -2,7 +2,7 @@
   "http-basic": {
     "connect.advancedcustomfields.com": {
       "username": "your_license_key",
-      "password": "http://www.wordpress-starter.test"
+      "password": "http://www.start.test"
     }
   }
 }
