--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wordpress-starter",
+  "name": "start",
   "description": "WordPress starter project for custom theme development",
   "version": "1.0.0",
   "type": "module",
