--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 # WordPress
 WP_ENV='development'
-WP_HOME='http://www.wordpress-starter.test'
+WP_HOME='http://www.start.test'
 
 # Database
 DB_HOST='localhost'
-DB_NAME='wordpress-starter'
+DB_NAME='start'
 DB_USER='root'
 DB_PASSWORD='root'
 
@@ -14,7 +14,7 @@ WP_DEBUG_DISPLAY=false
 WP_DEBUG_LOG=true
 
 # Theme
-PRODUCTION_URL='https://www.wordpress-starter.nl'
+PRODUCTION_URL='https://www.start.nl'
 
 # Authentication
 # Generate here: https://roots.io/salts.html
