--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@prettier/plugin-php": "^0.22.4",
     "@tailwindcss/vite": "^4.1.3",
     "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.1.3"
   },
   "scripts": {
@@ -17,10 +18,19 @@
   },
   "prettier": {
     "plugins": [
-      "@prettier/plugin-php"
+      "@prettier/plugin-php",
+      "prettier-plugin-tailwindcss"
     ],
     "singleAttributePerLine": true,
     "singleQuote": true,
-    "tabWidth": 2
+    "tabWidth": 2,
+    "overrides": [
+      {
+        "files": "*.phtml",
+        "options": {
+          "parser": "html"
+        }
+      }
+    ]
   }
 }
