👷 Install and configure deployer

--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
     "wpackagist-plugin/wp-mail-smtp": "*",
     "wpengine/advanced-custom-fields-pro": "*",
     "ramsey/uuid": "^4.7",
-    "league/glide": "^3.0"
+    "league/glide": "^3.0",
+    "deployer/deployer": "^7.5"
   },
   "config": {
     "optimize-autoloader": true,
