--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ WP_DEBUG_DISPLAY=false
 WP_DEBUG_LOG=true
 
 # Theme
-PRODUCTION_URL='https://www.start.nl'
+PRODUCTION_URL='https://start.bonsjoerd.eu'
 
 # Authentication
 # Generate here: https://roots.io/salts.html
