🔧 WP_MAIL_SMTP config

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,14 @@ WP_DEBUG_LOG=true
 # Theme
 PRODUCTION_URL='https://start.bonsjoerd.eu'
 
+# WP Mail SMTP
+# See: https://wpmailsmtp.com/docs/how-to-set-up-the-sendgrid-mailer-in-wp-mail-smtp/
+WPMS_ON=false
+WPMS_MAIL_FROM=''
+WPMS_MAIL_FROM_NAME=''
+WPMS_SENDGRID_API_KEY=''
+WPMS_SENDGRID_DOMAIN=''
+
 # Authentication
 # Generate here: https://roots.io/salts.html
 AUTH_KEY='generate_me'
